--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | 3-column preview card component</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -21,21 +21,21 @@
       <h2 class="title">Sedan</h2> 
       <p class="text">Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
         or on your next road trip.</p>
-        <a class="button">Learn More</a>
+        <a class="button button-one_color">Learn More</a>
     </section>
     <section class="box box-two_color">
       <div class="image"><img src="images/icon-suvs.svg" alt="car-logo"></div>
       <h2 class="title">SUVs</h2>
       <p class="text">Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
         and off-road adventures.</p>
-        <a class="button">Learn More</a>
+        <a class="button button-two_color">Learn More</a>
     </section>
     <section class="box box-three box-three_color">
       <div class="image"><img src="images/icon-luxury.svg" alt="car-logo"></div>
       </div><h2 class="title">Luxury</h2>
       <p class="text"> Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
         rental and arrive in style.</p>
-      <a class="button">Learn More</a>
+      <a class="button button-three_color">Learn More</a>
     </section>
   </main>
   
