--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   
   <title>Frontend Mentor | 3-column preview card component</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap" rel="stylesheet">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -18,7 +22,7 @@
   <main>
     <section class="box box-one box-one_color">
       <div class="image"><img src="images/icon-sedans.svg" alt="car-logo"></div>
-      <h2 class="title">Sedan</h2> 
+      <h1 class="title">Sedan</h1> 
       <p class="text">Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
         or on your next road trip.</p>
         <a class="button button-one_color">Learn More</a>
@@ -32,7 +36,7 @@
     </section>
     <section class="box box-three box-three_color">
       <div class="image"><img src="images/icon-luxury.svg" alt="car-logo"></div>
-      </div><h2 class="title">Luxury</h2>
+      </div><h3 class="title">Luxury</h3>
       <p class="text"> Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
         rental and arrive in style.</p>
       <a class="button button-three_color">Learn More</a>
